fix arrows z-index in MovieSlider

--- a/src/style/movies-slider.scss
+++ b/src/style/movies-slider.scss
@@ -26,7 +26,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 10px 20px;
-        z-index: 100;
+        z-index: 10;
         .arrow {
             pointer-events: all;
             visibility: visible;
